# smalltopk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_1.sh  build_1_all.sh  highlight_test.md
article/: main5.md
faiss/: CMakeLists.txt  IndexSmallTopK.cpp  IndexSmallTopK.h
faiss/benchmark/: benchmark.cpp
smalltopk/: CMakeLists.txt  dummy.cpp  dummy.h  smalltopk.h  smalltopk_dispatch.cpp  smalltopk_params.h  types.h
smalltopk/arm/: arm_instruction_set.cpp  kernel_components.h  kernel_getmink.h  kernel_getmink_fp32hack.h  kernel_sorting.h  kernel_sorting_fp32hack.h  kernel_sorting_fp32hack_approx.h  sorting_networks.h  sve_getmink_fp32.cpp  sve_getmink_fp32.h  sve_getmink_fp32_dummy.cpp  sve_getmink_fp32hack.cpp  sve_getmink_fp32hack.h  sve_getmink_fp32hack_dummy.cpp  sve_sorting_fp16.cpp  sve_sorting_fp16.h  sve_sorting_fp16_dummy.cpp  sve_sorting_fp32.cpp  sve_sorting_fp32.h  sve_sorting_fp32_dummy.cpp  sve_sorting_fp32hack.cpp  sve_sorting_fp32hack.h  sve_sorting_fp32hack_approx.cpp  sve_sorting_fp32hack_approx.h  sve_sorting_fp32hack_approx_dummy.cpp  sve_sorting_fp32hack_dummy.cpp  sve_vec.h
smalltopk/utils/: distances.cpp  env.cpp  env.h  macro_repeat_undefine.h  norms-inl.h  norms.cpp  norms.h  round.h  transpose.cpp  transpose.h
smalltopk/x86/: amx_init.cpp  amx_init_dummy.cpp  avx512_getmink_fp32.cpp  avx512_getmink_fp32.h  avx512_getmink_fp32_dummy.cpp  avx512_getmink_fp32hack.cpp  avx512_getmink_fp32hack.h  avx512_getmink_fp32hack_dummy.cpp  avx512_sorting_fp16.cpp  avx512_sorting_fp16.h  avx512_sorting_fp16_dummy.cpp  avx512_sorting_fp32.cpp  avx512_sorting_fp32.h  avx512_sorting_fp32_dummy.cpp  avx512_sorting_fp32hack.cpp  avx512_sorting_fp32hack.h  avx512_sorting_fp32hack_amx.cpp  avx512_sorting_fp32hack_amx.h  avx512_sorting_fp32hack_amx_dummy.cpp  avx512_sorting_fp32hack_approx.cpp  avx512_sorting_fp32hack_approx.h  avx512_sorting_fp32hack_approx_dummy.cpp  avx512_sorting_fp32hack_dummy.cpp  avx512_vec_fp16.h  avx512_vec_fp32.h  fp16_norms.h  kernel_components.h  kernel_getmink.h  kernel_getmink_fp32hack.h  kernel_sorting.h  kernel_sorting_fp32hack.h  kernel_sorting_fp32hack_amx.h  kernel_sorting_fp32hack_approx.h  x86_instruction_set.cpp  x86_instruction_set.h
src/: CMakeLists.txt  dummy.cpp  dummy.h  smalltopk.h  smalltopk_dispatch.cpp  smalltopk_params.h
src/arm/: arm_instruction_set.h  kernel_components.h  kernel_getmink.h  kernel_sorting.h  kernel_sorting_fp32hack.h  kernel_sorting_fp32hack_approx.h  sve_getmink_fp32_dummy.cpp  sve_sorting_fp32hack.cpp  sve_sorting_fp32hack.h  sve_sorting_fp32hack_approx.h  sve_vec.h
src/utils/: distances-inl.h  distances.cpp  distances.h  env.cpp  macro_repeat_define.h  macro_repeat_undefine.h  norms.cpp  round.h  transpose-inl.h
src/x86/: amx_init.h  amx_init_dummy.cpp  avx512_getmink_fp32.cpp  avx512_getmink_fp32_dummy.cpp  avx512_getmink_fp32hack.h  avx512_sorting_fp16.h  avx512_sorting_fp32.cpp  avx512_sorting_fp32_dummy.cpp  avx512_sorting_fp32hack.cpp  avx512_sorting_fp32hack_amx.h  avx512_sorting_fp32hack_amx_dummy.cpp  avx512_sorting_fp32hack_approx.cpp  avx512_sorting_fp32hack_approx.h  avx512_sorting_fp32hack_approx_dummy.cpp  avx512_sorting_fp32hack_dummy.cpp  avx512_vec_fp32.h  fp16_norms.h  kernel_components.h  kernel_getmink.h  kernel_sorting.h  kernel_sorting_fp32hack.h  kernel_sorting_fp32hack_amx.h  kernel_sorting_fp32hack_approx.h  sorting_networks.h  x86_instruction_set.h
tests/: CMakeLists.txt  test_functionality.cpp  test_getmink.cpp  utils.h
tests/from_faiss/: distances.h  heap.h  ordered_key_value.h  platform_macros.h  result_handlers.h  search.h
